# gait-recording-and-monitoring

./: ._sync_video_data_modular.py  .cursorignore  .gitignore  CLAUDE.md  QTM_Insole_Recorder.spec  QTM_Insole_Recorder_Windows.spec  README.md  app.py  data_info.txt  fix_trc_file.py  list_markers.py  ml_dataset_window_backup.py  moticon_receiver.py  process_data.py  process_data_force.py  pyproject.toml  qtm_stream.py  requirements-ci.txt  requirements.txt  sync_video_data.py  sync_video_data_modular.py  sync_video_data_qt.py
.github/workflows/: build-release.yml
recorder_app/: USER_GUIDE.md  config_manager.py  insole_worker.py  main_window.py  qtm_worker.py  recorder_worker.py  utils.py
sync_video/: __init__.py  config.py
sync_video/gui/: __init__.py  correlation_module.py  correlation_window.py  ml_dataset_module.py  ml_dataset_window.py  ml_model_window.py  model_manager.py  qt_player.py  utils.py  video_player.py  visualization_manager.py
sync_video/gui/threads/: __init__.py  data_analyze_thread.py  training_thread.py
sync_video/gui/ui/: __init__.py  canvas.py  evaluation_tab.py  loading_window.py  model_visualizer.py  training_tab.py  visualization_tab.py
sync_video/loaders/: __init__.py  insole_loader.py  opencap_loader.py  qtm_loader.py
sync_video/ml/: __init__.py  cnn_model.py  model_visualization.py
sync_video/processors/: __init__.py  correlation_analysis.py  force_processor.py  joint_angle_processor.py
sync_video/utils/: __init__.py  signal_processing.py  synchronization.py
